GPLIM-3937 Rollback test shell script merge