@@ -28,16 +28,13 @@ EOF
 TESTS="Tests.ArqSuite.Standard Tests.ArqSuite.Stubby Tests.Multithreaded Tests.DatabaseFree Tests.ExternalIntegration Tests.Alternatives"
 BUILD=
 CLOVER=0
-ADDITIONAL_OPTIONS=
-
-while getopts "hct:b:j:m:" OPTION; do
+while getopts "hct:b:j:" OPTION; do
     case $OPTION in
 	h) usage; exit 1;;
 	t) TESTS=$OPTARG;;
 	b) BUILD=$OPTARG;;
 	j) JBOSS_HOME=$OPTARG;;
 	c) CLOVER=1;;
-	m) ADDITIONAL_OPTIONS=$OPTARG;;
 	[?]) usage; exit 1;;
     esac
 done
@@ -45,14 +42,8 @@ done
 if [ -e "/broad/tools/scripts/useuse" ]
 then
     source /broad/tools/scripts/useuse
-    use Maven-3.1
-    #    use Java-1.8
-    echo "Setting Java-1.8"
-    use -v .java-jdk-1.8.0_112-x86-64
-else
-    echo "Unable to set Java-1.8"
-    ls -l /broad/tools/scripts/useuse
-    exit 1
+    use -v Maven-3.1
+    use -v Java-1.7
 fi
 
 if [ ! -e "$JBOSS_HOME" ]
@@ -65,6 +56,8 @@ EOF
     exit 1
 fi
 
+MAVEN_OPTS="-Xms4g -XX:MaxPermSize=1g $SSL_OPTS"
+
 if [ "x$SSL_OPTS" == "x" ]
 then
     KEYSTORE_FILE="../JBossConfig/src/main/resources/keystore/.keystore"
@@ -72,18 +65,12 @@ then
     SSL_OPTS="-DkeystoreFile=$KEYSTORE_FILE -DkeystorePassword=$KEYSTORE_PASSWORD"
 fi
 
+BUILD_PROFILE=$BUILD
 if [ "x$BUILD_PROFILE" == "x" ]
 then
-    BUILD_PROFILE=BUILD
+    BUILD_PROFILE="BUILD"
 fi
 
-MAVEN_OPTS="-Xms4g -XX:MaxMetaspaceSize=1g $SSL_OPTS"
-OPTIONS="-PArquillian-WildFly10-Remote,$BUILD_PROFILE -Djava.awt.headless=true --batch-mode -Dmaven.download.meter=silent "
-PROFILES="Tests.ArqSuite.Standard Tests.ArqSuite.Stubby Tests.Multithreaded Tests.DatabaseFree Tests.ExternalIntegration Tests.Alternatives"
-#PROFILES="Tests.ExternalIntegration"
-#PROFILES="Tests.DatabaseFree"
-#PROFILES="Tests.Multithreaded"
-#PROFILES="Tests.Alternatives"
 
 EXIT_STATUS=0
 
@@ -92,7 +79,19 @@ then
     rm tests.log
 fi
 
-for PROFILE in $PROFILES
+if [[ $CLOVER -eq 0 ]]
+then
+    GOALS="clean test"
+else
+    GOALS="clean clover:setup verify"
+    rm -rf clover/
+    mkdir clover
+    BUILD_PROFILE="$BUILD_PROFILE,Clover.All -Dmaven.clover.licenseLocation=/prodinfolocal/BambooHome/clover.license"
+fi
+
+OPTIONS="-PArquillian-JBossAS7-Remote,$BUILD_PROFILE -Djava.awt.headless=true --batch-mode -Dmaven.download.meter=silent "
+
+for TEST in $TESTS
 do
     cat <<EOF
 >>>>>
@@ -101,14 +100,11 @@ Properties
 JBOSS_HOME=$JBOSS_HOME
 MAVEN_OPTS=$MAVEN_OPTS
 OPTIONS=$OPTIONS
-PROFILES=$PROFILES
-JAVA_HOME=$JAVA_HOME
 
->>>> Executing profile $PROFILE
+>>>> Executing test profile $TEST
 
 EOF
-# Adding the clean to deal with a known Java 1.8 bug when compling from Maven -- see JDK-8067747
-    mvn $OPTIONS -P$PROFILE clean test | tee -a tests.log
+    mvn $OPTIONS -P$TEST $GOALS | tee -a tests.log
     if [ ${PIPESTATUS[0]} -ne 0 ]
     then
         EXIT_STATUS=${PIPESTATUS[0]}
@@ -117,13 +113,31 @@ EOF
 #    echo -n 1>&2 "Press return to continue."; read CONTINUE
     if [ -e "target/surefire-reports" ]
     then
-        if [ -e "surefire-reports-$PROFILE" ]
+        if [ -e "surefire-reports-$TEST" ]
         then
-            rm -rf surefire-reports-$PROFILE
+            rm -rf surefire-reports-$TEST
         fi
-        mv target/surefire-reports surefire-reports-$PROFILE
+        mv target/surefire-reports surefire-reports-$TEST
     fi
+    if [ -e "target/clover/surefire-reports" ]
+    then
+        if [ -e "clover/surefire-reports-$TEST" ]
+        then
+            rm -rf clover/surefire-reports-$TEST
+        fi
+        mv target/clover/surefire-reports clover/surefire-reports-$TEST
+    fi
+
 done
+
+if [[ $CLOVER -eq 1 ]]
+then
+    mvn $OPTIONS clover:aggregate clover:clover | tee -a tests.log
+    if [ ${PIPESTATUS[0]} -ne 0 ]
+    then
+	EXIT_STATUS=${PIPESTATUS[0]}
+    fi
+fi
 
 exit $EXIT_STATUS
 
